--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ click==8.1.7
 colorama==0.4.6
 dill==0.3.7
 Flask==3.0.0
+Flask-JSON==0.4.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.0
 idna==3.4
 install==1.3.5
 isort==5.12.0
@@ -19,6 +22,8 @@ pycodestyle==2.11.1
 pylint==3.0.1
 python-dotenv==1.0.0
 requests==2.31.0
+SQLAlchemy==2.0.22
 tomlkit==0.12.1
+typing_extensions==4.8.0
 urllib3==2.0.7
 Werkzeug==3.0.0
